# freetype

./: .travis.yml  CMakeLists.txt  README  README.md  cdep.yml  cmakeify.yml
.cdep/examples/cmake/: cmakeify.yml
sqlite/: .travis.yml
